<resources>
    <string name="app_name">PUM</string>
    <string name="emp_name">Emp Name</string>
    <string name="emp_poss">Chief Executive Officer</string>
    <string name="emp_nik">Emp Number</string>
    <!--TITLE-->
    <string name="request_title">REQUEST</string>
    <string name="approval_title">APPROVAL</string>
    <string name="report_title">REPORT</string>
    <string name="inbox_title">INBOX</string>
    <string name="responsibility_title">RESPONSIBILITY</string>
    <string name="setting_title">SETTING</string>
    <!--SUBTITLE-->
    <string name="subtitle_employee">EMPLOYEE</string>
    <string name="subtitle_document">DOCUMENT</string>
    <string name="subtitle_fund">FUND</string>
    <string name="subtitle_doc_detail">DOCUMENT DETAIL</string>

    <!--approval tag-->
    <string name="rcv_doc1">Doc Number </string>
    <string name="rcv_doc2">Amount </string>
    <string name="rcv_doc3">Vendor Number </string>
    <string name="rcv_doc4">Vendor Name </string>

    <!--document tag-->
    <string name="rcv_approval1">Pum Number :</string>
    <string name="rcv_approval2">Name :</string>
    <string name="rcv_approval3">Amount :</string>
    <string name="rcv_approval4">Status :</string>



    <!--inbox tag-->
    <string name="rcv_inbox1">Pum Number :</string>
    <string name="rcv_inbox2">Doc Type :</string>
    <string name="rcv_inbox3">Doc Detail :</string>
    <string name="rcv_inbox4">Trx Type :</string>
    <string name="rcv_inbox5"> Amount :</string>
    <string name="rcv_inbox6"> Status :</string>
    <string name="txt_logout">Logout</string>
    <string name="copy_right">Copyright © 2019 by PT. Indomarco Prismatama</string>
    <string name="next_features">Next Features</string>
    <string name="input_your_num">NIK</string>
    <string name="input_password">Password</string>
    <string name="input_access_code">Acces Code</string>
    <string name="nik_hint">      NIK</string>
    <string name="string_login_in_regis">Already have an Account? \n  Click to Login</string>
    <string name="btn_next">Next</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_cancel">Cancel</string>
    <string name="prompt">Select Your Dep</string>
    <string name="uploadImages">Set your image</string>
    <string name="msg_loading">Loading...</string>




    <string-array name="reff_doc">
        <item>Purchase Order (PO)</item>
        <item>Surat Pesanan (SP)</item>
        <item>Permintaan Pembelian (PP)</item>
    </string-array>

    <string-array name="currency">
        <item>IDR</item>
        <item>USD</item>
        <item>EUR</item>
        <item>CNY</item>
        <item>SGD</item>
    </string-array>

    <string-array name="trx_type">
        <item>Biaya Perjalanan Dinas</item>
        <item>Perlangkapan Karyawan</item>
        <item>Perlengkapan Dasar Karyawan</item>
        <item>Perlengkapan DC</item>
        <item>Perlengkapan Toko</item>
    </string-array>

    <string-array name="dep_name">
        <item>Select Your Department</item>
        <item>Dept 1</item>
        <item>Dept 2</item>
        <item>Dept 3</item>
        <item>Dept 4</item>
    </string-array>
</resources>
