<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapps2"
    android:orientation="vertical"
    tools:context=".activities.request.Request2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lemon_milk"
            android:gravity="center"
            android:text="@string/request_title"
            android:textColor="#FFF"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:fontFamily="@font/lemon_milk_light"
            android:paddingLeft="20dp"
            android:text="@string/subtitle_document"
            android:textColor="@color/colorFont"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical">


        <Spinner
            android:id="@+id/sp_doc_request2"
            android:layout_width="360dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/bginput2"
            android:padding="2dp"
            android:popupBackground="#286FE6"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="18dp">

            <TextView
                android:id="@+id/tv_doc_detail_request2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/bginput2"
                android:padding="6dp"
                android:paddingStart="@dimen/et_start"
                android:text="Document Detail"
                android:textColor="@color/colorHint"
                android:textSize="22dp" />

            <ImageButton

                android:id="@+id/ibtn_doc_detail_request2"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:background="@drawable/bginput3"
                android:src="@drawable/ic_action_search" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="280dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_next_request2"
                android:layout_width="140dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bginput5"
                android:text="@string/btn_next"
                android:textColor="@color/colorHint"
                android:textSize="22sp" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>