<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapps2"
    android:orientation="vertical"
    tools:context=".activities.request.RequestDetailActivity">

    <LinearLayout
        android:id="@+id/title_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lemon_milk"
            android:gravity="center"
            android:text="@string/request_title"
            android:textColor="@color/colorHint"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lemon_milk_light"
            android:gravity="center"
            android:text="@string/subtitle_doc_detail"
            android:textColor="@color/colorHint"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>


    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_request"
        android:layout_marginTop="8dp"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:rowCount="3">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_request_emp_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bginput6"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lemon_milk_light"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="@string/subtitle_employee"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_emp_name_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:paddingStart="24dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="@string/emp_name"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_emp_dep_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:paddingStart="24dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="Emp Dep"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_use_date_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:paddingStart="24dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="Use Date"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_resp_date_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:paddingStart="24dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="Resp Date"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:id="@+id/cv_request_doc_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bginput6"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lemon_milk_light"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="@string/subtitle_document"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:paddingStart="24dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="Reff Document"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:paddingStart="24dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="Document Detail"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_request_fund_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bginput6"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lemon_milk_light"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="@string/subtitle_fund"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:paddingStart="24dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="Trx Type"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:paddingStart="24dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="Description"
                    android:maxLines="2"
                    android:maxLength="50"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp"
                    android:scrollbars="vertical"
                    android:isScrollContainer="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:paddingStart="24dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="Currency"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:paddingStart="24dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="Emp Name"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:paddingStart="24dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="Amount"
                    android:textColor="@color/colorHint"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </GridLayout>


    <LinearLayout

        android:id="@+id/bottom_page"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_finish_request"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/bginput"
            android:text="@string/btn_finish"
            android:textColor="@color/colorHint"
            />

        <Button
            android:id="@+id/btn_cancel_request"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/bginput4"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorHint" />
    </LinearLayout>


</LinearLayout>